// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stack > should render correctly max width 100% 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      style="--_4k0ekn1: 100%;"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly min width 100% 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      style="--_4k0ekn2: 100%;"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly with alignCenter 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
      <div>
        third child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly with row direction 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
      <div>
        third child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly with width 100% 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      style="--_4k0ekn0: 100%;"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly with wrap as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap_xxsmall__toi52u7j styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render correctly with wrap as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_wrap-reverse_xxsmall__toi52u7p styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stack > should render different direction and gap on different viewport sizes 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_large__toi52u2n styles_flexDirection_row_medium__toi52u2m styles_flexDirection_row_small__toi52u2l styles_flexDirection_row_xlarge__toi52u2o styles_flexDirection_column_xsmall__toi52u2e styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_2.5rem_large__toi52uz styles_gap_2rem_medium__toi52us styles_gap_1.5rem_small__toi52ul styles_gap_3rem_xlarge__toi52u16 styles_gap_1rem_xsmall__toi52ue styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        first child
      </div>
      <div>
        second child
      </div>
      <div>
        third child
      </div>
    </div>
  </div>
</DocumentFragment>
`;
